<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.main.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:padding="24dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/no_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
            app:layout_constraintStart_toEndOf="@+id/circleImageView"
            app:layout_constraintTop_toTopOf="@+id/circleImageView">

            <TextView
                android:id="@+id/textView"
                style="@style/text_content3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/hi"
                android:drawablePadding="2dp"
                android:textColor="@color/white"
                android:text="@string/hi" />

            <TextView
                style="@style/text_subContent3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/white_transparent2"
                android:text="@string/selamat_datang" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            style="@style/text_subContent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="@color/white"
            android:text="@string/saldo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

        <TextView
            android:id="@+id/tvSaldo"
            style="@style/text_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:text="@string/rp_0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSaldo">

            <com.google.android.material.button.MaterialButton
                style="@style/text_content3"
                android:id="@+id/btnTopUp"
                android:layout_width="120dp"
                android:layout_height="54dp"
                android:layout_weight="1"
                android:layout_marginRight="12dp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:text="@string/top_up"
                app:strokeWidth="1dp"
                app:strokeColor="@color/white_transparent2"
                app:backgroundTint="@color/white_transparent"
                app:cornerRadius="24dp"/>

            <com.google.android.material.button.MaterialButton
                style="@style/text_content3"
                android:id="@+id/btnTransfer"
                android:layout_width="120dp"
                android:layout_height="54dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:text="@string/transfer"
                app:strokeWidth="1dp"
                app:strokeColor="@color/white_transparent2"
                app:backgroundTint="@color/white_transparent"
                app:cornerRadius="24dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:orientation="horizontal">

        <TextView
            style="@style/text_content3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black90"
            android:text="@string/riwayat_transaksi"/>

        <TextView
            style="@style/text_subContent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="1"
            android:textColor="@color/blue_dark"
            android:text="@string/lihat_semua"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imgEmpty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="24dp"
        android:padding="48dp"
        android:src="@drawable/empty"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTransaction"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:listitem="@layout/item_transaction"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

</LinearLayout>